fix: address sbe review feedback
Agent-Logs-Url: https://github.com/camunda/camunda/sessions/52772a75-4565-42b6-ad71-e2615dae6fff

Co-authored-by: entangled90 <1188147+entangled90@users.noreply.github.com>